try to solve overflowing VH bug on real phone

--- a/src/styles/components/GameMenu.module.scss
+++ b/src/styles/components/GameMenu.module.scss
@@ -2,6 +2,7 @@
 
 .container {
   height: var(--app-height);
+  overflow: hidden;
   background-color: hsl(var(--clr-blue-900));
   display: grid;
   grid-template-rows: 15% 85%;
